# scope

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cliff.toml  scope.hpp  scopeConfig.cmake.in
.github/workflows/: build-and-test.yml
cevelop-workspace/: CMakeLists.txt
cevelop-workspace/scope14/: .project
cevelop-workspace/scope17/: .gitignore  .project  scope17.xml
cevelop-workspace/scope17/src/: Test.cpp  license.txt  scope.hpp
cmake/: packaging.cmake
examples/: .clang-format  CMakeLists.txt  Demo  Demo.cpp
include/: CMakeLists.txt  scope.hpp
tests/: CMakeLists.txt  test.cpp
